--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -11,7 +11,7 @@
 		<div id="brandname">
 			ML App
 		</div>
-		<h2>Review classificatio For electronics products</h2>
+		<h2>Review classification For electronics products</h2>
 		
 	</div>
 	</header>
@@ -21,7 +21,7 @@
 
 		
 	{% if prediction == 1%}
-	<h2 style="color:red;">It's a POsitive Review</h2>
+	<h2 style="color:red;">It's a Positive Review</h2>
 	{% elif prediction == 0%}
 	<h2 style="color:blue;">Negative review</h2>
 	{% endif %}
