--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -21,9 +21,9 @@
 
 		
 	{% if prediction == 1%}
-	<h2 style="color:red;">It's a Positive Review</h2>
+	<h2 style="color:red;">It's a Negative Review</h2>
 	{% elif prediction == 0%}
-	<h2 style="color:blue;">Negative review</h2>
+	<h2 style="color:blue;">Positive review</h2>
 	{% endif %}
 
 	</div>
